Avoid browsing removing several white spaces together

--- a/src/autocomplete.scss
+++ b/src/autocomplete.scss
@@ -23,6 +23,10 @@ $red: #f36c60;
     margin-bottom: 0px;
   }
 
+  .angucomplete-title {
+    white-space: pre;
+  }
+
   .angucomplete-selected-row {
     background-color:$grey-light;
   }
